--- a/chat/templates/index.html
+++ b/chat/templates/index.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
-{% block title %}MultiChat Home{% endblock %}
+{% block title %}Services Home{% endblock %}
 
-{% block header_text %}MultiChat Demo{% endblock %}
+{% block header_text %}Services Home{% endblock %}
 
 {% block content %}
 
